discover component loads, api rest not responding

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -17,7 +17,7 @@
         >Browse</a
       >
       <a
-        [routerLink]="['/']"
+        [routerLink]="['/news']"
         routerLinkActive="router-link-active"
         class="hover:text-white text-gray-400"
         >News</a
