feat: game page routing add

--- a/src/app/discover/carousel/carousel.component.html
+++ b/src/app/discover/carousel/carousel.component.html
@@ -1,43 +1,31 @@
 <div class="flex">
   <div>
     <img
-      class="rounded"
-      src="../../assets/star-wars-jedi-home-hero-xl.jpg"
+      class="rounded h-full object-cover"
+      src="../../assets/starwarsjedifallenorder.jpg"
       alt="image"
     />
   </div>
   <div>
-    <a class="flex p-5 items-center" href="">
-      <img
-        class="w-40"
-        src="../../assets/star-wars-jedi-home-hero-xl.jpg"
-        alt="image"
-      />
+    <a class="flex p-5 items-center gap-2" href="">
+      <img class="w-40 rounded" src="../../assets/godofwar.jpeg" alt="image" />
       <span class="w-72">Star Wars: Jedi Fallen Order</span>
     </a>
-    <a class="flex p-5 items-center" href="">
+    <a class="flex p-5 items-center gap-2" href="">
       <img
-        class="w-40"
-        src="../../assets/star-wars-jedi-home-hero-xl.jpg"
+        class="w-40 rounded"
+        src="../../assets/calistoprotocol.jpeg"
         alt="image"
       />
-      <span class="w-72">Star Wars: Jedi Fallen Order</span>
+      <span class="w-72">Calisto Protocol</span>
     </a>
-    <a class="flex p-5 items-center" href="">
-      <img
-        class="w-40"
-        src="../../assets/star-wars-jedi-home-hero-xl.jpg"
-        alt="image"
-      />
-      <span class="w-72">Star Wars: Jedi Fallen Order</span>
+    <a class="flex p-5 items-center gap-2" href="">
+      <img class="w-40 rounded" src="../../assets/control.jpeg" alt="image" />
+      <span class="w-72">Control</span>
     </a>
-    <a class="flex p-5 items-center" href="">
-      <img
-        class="w-40"
-        src="../../assets/star-wars-jedi-home-hero-xl.jpg"
-        alt="image"
-      />
-      <span class="w-72">Star Wars: Jedi Fallen Order</span>
+    <a class="flex p-5 items-center gap-2" href="">
+      <img class="w-40 rounded" src="../../assets/detroit.jpeg" alt="image" />
+      <span class="w-72">Detroit: Become Human</span>
     </a>
   </div>
 </div>
