--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<app-menu></app-menu>
+<header class="bg-zinc-900 text-white p-4">
+  <h1 class="font-medium text-2xl">GameStore</h1>
+</header>
+<main class="text-white justify-center md:px-60">
+  <app-menu></app-menu>
+  <router-outlet> </router-outlet>
+</main>
