--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,9 @@
+* {
+  font-family: "Inter", sans-serif;
+}
+main {
+}
+
 /* You can add global styles to this file, and also import other style files */
 @tailwind base;
 @tailwind components;
