feat: purchase/buy component added

--- a/src/app/discover/carousel/carousel.component.html
+++ b/src/app/discover/carousel/carousel.component.html
@@ -1,30 +1,42 @@
-<div class="flex">
+<div class="lg:flex gap-5 carousel w-full">
   <div>
     <img
       class="rounded h-full object-cover"
-      src="../../assets/starwarsjedifallenorder.jpg"
+      src="../../assets/fallenorderhorizontal.jpg"
       alt="image"
     />
   </div>
-  <div>
-    <a class="flex p-5 items-center gap-2" href="">
-      <img class="w-40 rounded" src="../../assets/godofwar.jpeg" alt="image" />
-      <span class="w-72">Star Wars: Jedi Fallen Order</span>
-    </a>
-    <a class="flex p-5 items-center gap-2" href="">
+  <div class="h-full flex flex-col gap-5">
+    <a class="flex items-center gap-2 h-1/4" href="">
       <img
-        class="w-40 rounded"
+        class="w-40 h-full rounded object-cover"
+        src="../../assets/godofwar.jpeg"
+        alt="image"
+      />
+      <span class="w-72">God of War</span>
+    </a>
+    <a class="flex items-center gap-2 h-1/4" href="">
+      <img
+        class="w-40 h-full rounded object-cover"
         src="../../assets/calistoprotocol.jpeg"
         alt="image"
       />
       <span class="w-72">Calisto Protocol</span>
     </a>
-    <a class="flex p-5 items-center gap-2" href="">
-      <img class="w-40 rounded" src="../../assets/control.jpeg" alt="image" />
+    <a class="flex items-center gap-2 h-1/4" href="">
+      <img
+        class="w-40 h-full rounded object-cover"
+        src="../../assets/control.jpeg"
+        alt="image"
+      />
       <span class="w-72">Control</span>
     </a>
-    <a class="flex p-5 items-center gap-2" href="">
-      <img class="w-40 rounded" src="../../assets/detroit.jpeg" alt="image" />
+    <a class="flex items-center gap-2 h-1/4" href="">
+      <img
+        class="w-40 h-full rounded object-cover"
+        src="../../assets/detroit.jpeg"
+        alt="image"
+      />
       <span class="w-72">Detroit: Become Human</span>
     </a>
   </div>
