--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -4,19 +4,13 @@
       [routerLink]="['']"
       routerLinkActive="router-link-active"
       class="hover:text-white text-gray-400"
-      >Discover</a
+      >Home</a
     >
     <a
       [routerLink]="['/browse']"
       routerLinkActive="router-link-active"
       class="hover:text-white text-gray-400"
       >Browse</a
-    >
-    <a
-      [routerLink]="['/news']"
-      routerLinkActive="router-link-active"
-      class="hover:text-white text-gray-400"
-      >News</a
     >
   </div>
   <input
@@ -26,6 +20,5 @@
   />
   <div class="justify-end flex gap-12">
     <a class="hover:text-white text-gray-400">Wishlist</a>
-    <a class="hover:text-white text-gray-400">Cart</a>
   </div>
 </nav>
