--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,7 +1,11 @@
 @if (listedGame) {
   <h1 class="text-4xl w-full py-2">{{ namedGame?.name }}</h1>
   <div class="lg:flex w-full lg:justify-between gap-8">
-    <img class="rounded w-3/4" src="{{ namedGame?.horizontalsrc }}" alt="" />
+    <img
+      class="rounded w-3/4 object-cover"
+      src="{{ namedGame?.horizontalsrc }}"
+      alt=""
+    />
     <div class="flex flex-col justify-end items-center w-1/4 gap-4 relative">
       <div class="flex flex-col gap-3 w-full">
         <span class="flex justify-between w-full">
@@ -27,11 +31,12 @@
       </div>
       <div class="flex gap-2 flex-col justify-end w-full">
         <span class="w-full">Price: $199 </span>
-        <button class="w-full h-12 bg-green-400 rounded text-black">
+
+        <button
+          [routerLink]="['buy']"
+          class="w-full h-12 bg-green-500 rounded text-black"
+        >
           Buy Now
-        </button>
-        <button class="w-full h-12 rounded bg-gray-900 border border-white">
-          Add to Cart
         </button>
         <button class="w-full h-12 rounded bg-gray-900 border border-white">
           Add to Wishlist
