--- a/src/app/discover/discover.component.html
+++ b/src/app/discover/discover.component.html
@@ -31,7 +31,7 @@
               />
             </a>
           </div>
-          <span class="w-40 text-gray-400 text-sm">{{ game.publisher }}</span>
+          <span class="w-40 text-zinc-300 text-sm">{{ game.publisher }}</span>
           <span class="w-40">{{ game.name }}</span>
           <span class="w-40">${{ game.price }}</span>
         </li>
@@ -44,7 +44,7 @@
   <div class="flex overflow-y-hidden w-full">
     <ul class="flex flex-nowrap gap-4">
       @for (game of rpgGames.slice(0, 7); track $index) {
-        <li class="flex flex-col relative" (mouseover)="showLikeButton()">
+        <li class="flex flex-col relative gap-1" (mouseover)="showLikeButton()">
           <div class="relative">
             @if (shouldShowLikeButton) {
               <button
@@ -71,7 +71,7 @@
               />
             </a>
           </div>
-          <span class="w-40 text-gray-400 text-sm">{{ game.publisher }}</span>
+          <span class="w-40 text-zinc-300 text-sm">{{ game.publisher }}</span>
           <span class="w-40">{{ game.name }}</span>
           <span class="w-40">${{ game.price }}</span>
         </li>
