--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -34,7 +34,7 @@
 
         <button
           [routerLink]="['buy']"
-          class="w-full h-12 bg-green-500 rounded text-black"
+          class="w-full h-12 bg-blue-500 rounded text-white text-lg"
         >
           Buy Now
         </button>
