--- a/src/app/discover/carousel/carousel.component.html
+++ b/src/app/discover/carousel/carousel.component.html
@@ -1,43 +1,51 @@
-<div class="lg:flex gap-5 carousel w-full">
-  <div>
+<div class="lg:flex gap-5 carousel w-full h-full">
+  <div class="carousel-picture">
     <img
-      class="rounded h-full object-cover"
+      class="rounded h-full w-full object-cover"
       src="../../assets/fallenorderhorizontal.jpg"
       alt="image"
     />
   </div>
-  <div class="h-full flex flex-col gap-5">
-    <a class="flex items-center gap-2 h-1/4" href="">
+  <div class="h-full flex flex-col justify-between gap-2 text-lg">
+    <a class="flex items-center gap-2 h-1/5" href="">
       <img
         class="w-40 h-full rounded object-cover"
         src="../../assets/godofwar.jpeg"
         alt="image"
       />
-      <span class="w-72">God of War</span>
+      <span class="w-52">God of War</span>
     </a>
-    <a class="flex items-center gap-2 h-1/4" href="">
+    <a class="flex items-center gap-2 h-1/5" href="">
       <img
         class="w-40 h-full rounded object-cover"
         src="../../assets/calistoprotocol.jpeg"
         alt="image"
       />
-      <span class="w-72">Calisto Protocol</span>
+      <span class="w-52">Calisto Protocol</span>
     </a>
-    <a class="flex items-center gap-2 h-1/4" href="">
+    <a class="flex items-center gap-2 h-1/5" href="">
       <img
         class="w-40 h-full rounded object-cover"
         src="../../assets/control.jpeg"
         alt="image"
       />
-      <span class="w-72">Control</span>
+      <span class="w-52">Control</span>
     </a>
-    <a class="flex items-center gap-2 h-1/4" href="">
+    <a class="flex items-center gap-2 h-1/5" href="">
       <img
         class="w-40 h-full rounded object-cover"
         src="../../assets/detroit.jpeg"
         alt="image"
       />
-      <span class="w-72">Detroit: Become Human</span>
+      <span class="w-52">Detroit: Become Human</span>
+    </a>
+    <a class="flex items-center gap-2 h-1/5" href="">
+      <img
+        class="w-40 h-full rounded object-cover"
+        src="../../assets/sekiroHorizontal.webp"
+        alt="image"
+      />
+      <span class="w-52">Sekiro Shadows Die Twice</span>
     </a>
   </div>
 </div>
