feat: game filter and payment form option works

--- a/src/app/browse/browse.component.html
+++ b/src/app/browse/browse.component.html
@@ -1,5 +1,5 @@
 <div class="">
-  <h3 class="text-xl py-4">All Games</h3>
+  <h3 class="text-xl py-4 text-zinc-200">All Games</h3>
   <div class="flex w-full">
     <ul class="flex flex-wrap gap-3 w-full">
       @for (game of listedGames; track $index) {
