--- a/src/app/discover/carousel/carousel.component.html
+++ b/src/app/discover/carousel/carousel.component.html
@@ -7,7 +7,7 @@
     />
   </div>
   <div class="h-full flex flex-col justify-between gap-2 text-lg">
-    <a class="flex items-center gap-2 h-1/5" href="">
+    <a class="flex items-center gap-2 h-1/5 rounded" href="">
       <img
         class="w-40 h-full rounded object-cover"
         src="../../assets/godofwar.jpeg"
