--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -16,9 +16,11 @@
   <input
     type="text"
     placeholder="Search..."
+    (input)="onInputChange($event)"
     class="bg-zinc-900 rounded-xl pl-4 h-8 text-white text-sm border-0 justify-end"
   />
   <div class="justify-end flex gap-12">
     <a class="hover:text-white text-gray-400">Wishlist</a>
+    {{ testValue }}
   </div>
 </nav>
