--- a/src/app/browse/browse.component.html
+++ b/src/app/browse/browse.component.html
@@ -2,6 +2,11 @@
   <h3 class="text-xl py-4 text-zinc-200">All Games</h3>
   <div class="flex w-full">
     <ul class="flex flex-wrap gap-3 w-full">
+      @if (gameNotFound) {
+        <span
+          >We Still dont have the title <strong>"{{ gameSearched }}"</strong>
+        </span>
+      }
       @for (game of listedGames; track $index) {
         <li class="flex flex-col relative w-48" (mouseover)="showLikeButton()">
           <div class="relative">
