--- a/src/app/discover/carousel/carousel.component.html
+++ b/src/app/discover/carousel/carousel.component.html
@@ -10,7 +10,7 @@
     <a class="flex items-center gap-2 h-1/5 rounded" href="">
       <img
         class="w-40 h-full rounded object-cover"
-        src="../../assets/godofwar.jpeg"
+        src="../../assets/godofwarhorizontal.jpeg"
         alt="image"
       />
       <span class="w-52">God of War</span>
