--- a/src/app/game/game-pay/pay-credit-form/pay-credit-form.component.html
+++ b/src/app/game/game-pay/pay-credit-form/pay-credit-form.component.html
@@ -1,17 +1,20 @@
-<div class="flex flex-col gap-1 w-96">
+<form
+  class="flex flex-col gap-1 w-96"
+  [formGroup]="creditForm"
+  (ngSubmit)="onSubmitForm()"
+>
   <label class="purchaseInfoLabel" for="">CPF:</label>
   <input
     class="purchaseInfoInput"
     formControlName="cpf"
-    type="text"
     title="Your CPF"
     required
-    pattern="\d{3}\.\d{3}\.\d{3}-\d{2}|\d{11}"
+    (input)="onCpfInput($event)"
   />
   <label class="purchaseInfoLabel" for="">Card Number:</label>
-  <input class="purchaseInfoInput" formControlName="cardNumber" type="text" />
+  <input class="purchaseInfoInput" formControlName="cardNumber" type="number" />
   <label class="purchaseInfoLabel" for="">Expire Date:</label>
-  <input class="purchaseInfoInput" formControlName="expireDate" type="text" />
+  <input class="purchaseInfoInput" formControlName="expireDate" type="date" />
   <label for="">CVV Number:</label>
   <input
     class="purchaseInfoInput"
@@ -20,4 +23,17 @@
     required=""
     pattern="\d{3,4}"
   />
-</div>
+  <div class="flex flex-col">
+    <button
+      class="bg-blue-500 text-white text-lg rounded my-2 py-1"
+      type="submit"
+    >
+      Confirm Payment
+    </button>
+    <a
+      class="bg-zinc-600 text-white text-lg rounded my-2 py-1 text-center"
+      href="/"
+      >Cancel</a
+    >
+  </div>
+</form>
