feat: scss nesting in carousel

--- a/src/app/discover/carousel/carousel.component.html
+++ b/src/app/discover/carousel/carousel.component.html
@@ -1,5 +1,5 @@
 <div class="lg:flex gap-5 carousel w-full h-full">
-  <div class="carousel-picture">
+  <div class="picture">
     <img
       class="rounded h-full w-full object-cover"
       src="{{ highlightedGame?.horizontalsrc }}"
