--- a/src/app/discover/carousel/carousel.component.scss
+++ b/src/app/discover/carousel/carousel.component.scss
@@ -1,7 +1,7 @@
 .carousel {
   height: 500px;
-}
-.carousel-picture {
-  width: 1000px;
-  height: 500px;
+  .picture {
+    width: 1000px;
+    height: 500px;
+  }
 }
