--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,6 +1,6 @@
 @if (listedGame) {
   <h1 class="text-4xl w-full py-2">{{ namedGame?.name }}</h1>
-  <div class="lg:flex w-full lg:justify-between gap-8">
+  <div class="lg:flex w-full h-full lg:justify-between gap-8">
     <img
       class="rounded w-3/4 object-cover"
       src="{{ namedGame?.horizontalsrc }}"
