--- a/src/app/discover/carousel/carousel.component.html
+++ b/src/app/discover/carousel/carousel.component.html
@@ -15,7 +15,7 @@
         (click)="selectGame(game)"
       >
         <img
-          class="w-40 h-full rounded object-cover"
+          class="w-40 h-full rounded object-cover card"
           src="{{ game.horizontalsrc }}"
           alt="image"
           onclick="selectGame(game)"
