--- a/src/app/game/game-pay/game-pay.component.html
+++ b/src/app/game/game-pay/game-pay.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col md:flex-row gap-10 justify-center h-svh mt-56">
+<div class="flex flex-col md:flex-row gap-10 justify-center h-svh pt-56">
   <form [formGroup]="form" class="flex flex-col gap-2 w-96">
     <strong class="text-xl">Payment Info:</strong>
     <label class="text-lg text-zinc-200" for="payment"
