--- a/src/app/game/game-pay/pay-credit-form/pay-credit-form.component.html
+++ b/src/app/game/game-pay/pay-credit-form/pay-credit-form.component.html
@@ -26,7 +26,7 @@
   <div class="flex flex-col">
     <a
       [ngClass]="{ disabled: !creditForm.valid }"
-      class="bg-blue-500 text-white text-lg rounded my-2 py-1"
+      class="bg-blue-500 text-white text-lg rounded my-2 py-1 text-center"
       type="submit"
       [routerLink]="['confirmation']"
       routerLinkActive="router-link-active"
