--- a/src/app/wishlist/wishlist.component.html
+++ b/src/app/wishlist/wishlist.component.html
@@ -1,10 +1,5 @@
 <ul class="flex flex-wrap gap-3 w-full">
   @for (game of games; track $index) {
-    <app-game-card
-      [game]="game"
-      [shouldShowLikeButton]="shouldShowLikeButton"
-      (like)="likeGame($event)"
-    >
-    </app-game-card>
+    <app-game-card [game]="game" (like)="likeGame($index)"> </app-game-card>
   }
 </ul>
