--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -33,7 +33,7 @@
         <span class="w-full">Price: $199 </span>
 
         <button
-          [routerLink]="['buy']"
+          [routerLink]="['pay']"
           class="w-full h-12 bg-blue-500 rounded text-white text-lg"
         >
           Buy Now
