--- a/src/app/discover/carousel/carousel.component.html
+++ b/src/app/discover/carousel/carousel.component.html
@@ -1,4 +1,4 @@
-<div class="lg:flex gap-5 carousel w-full h-full">
+<div class="lg:flex gap-5 carousel w-full h-full" id="carousel">
   <a class="picture" [routerLink]="['/game', highlightedGame?.name]">
     <img
       class="rounded h-full w-full object-cover"
@@ -9,16 +9,11 @@
 
   <div class="h-full flex flex-col justify-between gap-2 text-lg">
     @for (game of games; track $index) {
-      <div
-        class="flex items-center gap-2 h-1/5 rounded"
-        href=""
-        (click)="selectGame(game)"
-      >
+      <div class="flex items-center gap-2 h-1/5 rounded" href="">
         <img
           class="w-40 h-full rounded object-cover card"
           src="{{ game.horizontalsrc }}"
           alt="image"
-          onclick="selectGame(game)"
         />
         <span class="w-52">{{ game.name }}</span>
       </div>
