"Updated app component HTML, SCSS, and TS files; added RouterModule to imports; modified browse and discover component HTML; updated menu component HTML; and changed environment API URL."

--- a/src/app/game/game-pay/game-pay.component.html
+++ b/src/app/game/game-pay/game-pay.component.html
@@ -30,6 +30,10 @@
           >Cancel</a
         >
       </div>
+      <span class="text-yellow-400"
+        >No real credit card infos are necessary. This is just a payment
+        simulation!</span
+      >
     }
   </form>
   <div class="flex flex-col gap-5">
