feat: discover scrolling button, game card beauty improvement

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<main class="text-white justify-center md:px-56">
+<main class="text-white flex flex-col justify-center md:px-56">
   @if (showMenu == true) {
     <app-menu></app-menu>
   }
