--- a/src/app/discover/carousel/carousel.component.html
+++ b/src/app/discover/carousel/carousel.component.html
@@ -1,4 +1,4 @@
-<div class="lg:flex gap-5 carousel w-full h-full" id="carousel">
+<div class="lg:flex gap-5 carousel w-full h-full justify-center" id="carousel">
   <a class="picture" [routerLink]="['/game', highlightedGame?.name]">
     <img
       class="rounded h-full w-full object-cover"
