--- a/src/app/discover/discover.component.html
+++ b/src/app/discover/discover.component.html
@@ -1,21 +1,40 @@
 <carousel></carousel>
-<div>
+<main class="gamesByCategory">
   <h3 class="text-xl py-4 text-zinc-200">Action Games</h3>
-  <div class="flex overflow-y-hidden w-full">
-    <ul class="flex flex-nowrap gap-4">
-      @for (game of actionGames.slice(0, 7); track $index) {
-        <app-game-card [game]="game" (like)="likeGame($event)"> </app-game-card>
-      }
-    </ul>
+  <div class="category">
+    <button class="scroll-button left" (click)="scrollLeft('actionGamesList')">
+      ◀
+    </button>
+    <div class="overflow-x-hidden" id="actionGamesList">
+      <ul class="flex flex-nowrap gap-4 py-4">
+        @for (game of actionGames.slice(0, 9); track $index) {
+          <app-game-card [game]="game" (like)="likeGame($event)">
+          </app-game-card>
+        }
+      </ul>
+    </div>
+    <button
+      class="scroll-button right"
+      (click)="scrollRight('actionGamesList')"
+    >
+      ▶
+    </button>
   </div>
-</div>
-<div>
   <h3 class="text-xl py-4 text-zinc-200">RPG Games</h3>
-  <div class="flex overflow-y-hidden w-full">
-    <ul class="flex flex-nowrap gap-4">
-      @for (game of rpgGames.slice(0, 7); track $index) {
-        <app-game-card [game]="game" (like)="likeGame($event)"> </app-game-card>
-      }
-    </ul>
+  <div class="category">
+    <button class="scroll-button left" (click)="scrollLeft('rpgGamesList')">
+      ◀
+    </button>
+    <div class="overflow-x-hidden" id="rpgGamesList">
+      <ul class="flex flex-nowrap gap-4 py-2">
+        @for (game of rpgGames.slice(0, 9); track $index) {
+          <app-game-card [game]="game" (like)="likeGame($event)">
+          </app-game-card>
+        }
+      </ul>
+    </div>
+    <button class="scroll-button right" (click)="scrollRight('rpgGamesList')">
+      ▶
+    </button>
   </div>
-</div>
+</main>
